--- a/SFML_Arkanoid/SFML_Arkanoid.vcxproj
+++ b/SFML_Arkanoid/SFML_Arkanoid.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Paddle.cpp" />
     <ClCompile Include="Sound.cpp" />
+    <ClCompile Include="TextBox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
@@ -161,6 +162,7 @@
     <ClInclude Include="Level.h" />
     <ClInclude Include="Paddle.h" />
     <ClInclude Include="Sound.h" />
+    <ClInclude Include="TextBox.h" />
   </ItemGroup>
   <ItemGroup>
     <Media Include="Resources\arkbrick.wav" />
